# gitdoc

./: .gitignore  .mcp.json  BASE_PLAN.md  CLAUDE.md  Cargo.toml  GITDOC_USAGE.md  PROGRESS.md  README.md  docker-compose.yml  gitdoc.example.toml  justfile  plan.md  todo
.empirica_reflex_logs/checkpoints/ec0dd66a-ad3b-4d46-a93a-5dfbf5a5a578/: checkpoint_PREFLIGHT_1_20260314_093658.json
gitdoc-api-types/: Cargo.toml
gitdoc-api-types/src/: requests.rs  responses.rs
gitdoc-mcp/: Cargo.toml
gitdoc-mcp/src/: client.rs  config.rs  instructions.rs  main.rs  mode_filter.rs  params.rs  server.rs  snapshot_resolver.rs  types.rs
gitdoc-server/: Cargo.toml  application.yaml  build.rs
gitdoc-server/migrations/: 001_initial.sql  002_gc_support.sql  003_repo_url.sql  004_summaries.sql  005_conversations.sql  006_cheatsheets.sql  007_condensed_turn_index.sql  008_architect.sql  009_architect_v2.sql
gitdoc-server/proto/gitdoc/v1/: analysis.proto  architect.proto  cheatsheet.proto  common.proto  converse.proto  repos.proto  search.proto  snapshots.proto  symbols.proto
gitdoc-server/src/: architect.rs  cheatsheet.rs  config.rs  db.rs  embeddings.rs  error.rs  git_ops.rs  lib.rs  llm.rs  llm_executor.rs  main.rs  producers.rs  search.rs  util.rs
gitdoc-server/src/api/: cheatsheet.rs  condensation.rs  converse.rs  explain.rs  mod.rs  module_tree.rs  prompt_budget.rs  public_api.rs  repos.rs  search.rs  snapshots.rs  summaries.rs  symbols.rs  type_context.rs
gitdoc-server/src/api/architect/: advise.rs  decisions.rs  libs.rs  mod.rs  patterns.rs  projects.rs  rules.rs
gitdoc-server/src/db/: architect.rs  cheatsheets.rs  conversations.rs  docs.rs  embeddings.rs  files.rs  gc.rs  mod.rs  refs.rs  repos.rs  snapshots.rs  summaries.rs  symbols.rs  types.rs
gitdoc-server/src/grpc/: analysis.rs  architect.rs  cheatsheet.rs  converse.rs  convert.rs  error.rs  mod.rs  repos.rs  search.rs  snapshots.rs  symbols.rs
gitdoc-server/src/indexer/: doc_parser.rs  git_walker.rs  mod.rs  pipeline.rs  reference_resolver.rs  ts_parser.rs
gitdoc-server/src/indexer/languages/: rust.rs  typescript.rs
gitdoc-server/tests/: e2e_mcp_flow.rs  integration.rs
gitdoc_index/docs/: .managed.json  meta.json
gitdoc_index/symbols/: .managed.json  meta.json
llm-ai/: Cargo.toml
llm-ai/src/: client.rs  client_provider.rs  config.rs  error.rs  lib.rs  retry.rs  types.rs
