[workspace]
members = ["gitdoc-server", "gitdoc-mcp", "gitdoc-api-types", "llm-ai"]
resolver = "3"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
