[package]
name = "gitdoc-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
mcp-framework = { git = "https://github.com/Plawn/mcp-framework", tag = "v0.1.8" }
rmcp = { version = "0.5", features = ["server"] }
reqwest = { workspace = true, features = ["stream"] }
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
base64 = "0.22"
tracing = { workspace = true }
gitdoc-api-types = { path = "../gitdoc-api-types" }
