[package]
name = "gitdoc-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "gitdoc_server"
path = "src/lib.rs"

[[bin]]
name = "gitdoc-server"
path = "src/main.rs"

[dependencies]
# HTTP
r2e = { git = "https://github.com/Plawn/r2e.git", tag = "v0.2.25", features = ["openapi"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio = { workspace = true }

# Git
gix = { version = "0.72", default-features = false, features = ["basic", "revision"] }

# Tree-sitter
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"

# Storage
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "migrate"] }
pgvector = { version = "0.4", features = ["sqlx"] }
chrono = { version = "0.4", features = ["serde"] }

# Search
tantivy = "0.22"

# Serde
serde = { workspace = true }
serde_json = { workspace = true }

# Regex
regex = "1"

# HTTP (async, for embedding providers)
reqwest = { workspace = true }

# Config
toml = "0.8"

# LLM
llm-ai = { path = "../llm-ai" }

# Utils
tokio-stream = "0.1"
anyhow = { workspace = true }
sha2 = "0.10"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
gitdoc-api-types = { path = "../gitdoc-api-types" }
hex = "0.4"
streaming-iterator = "0.1"

[dev-dependencies]
tempfile = "3"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
