[package]
name = "llm-ai"
version = "0.1.0"
edition = "2021"

[features]
default = []
utoipa = ["dep:utoipa"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
thiserror = "2"
metrics = "0.24"
utoipa = { version = "4", optional = true }
