[package]
name = "llm-ai"
version = "0.1.0"
edition = "2021"

[features]
default = []
utoipa = ["dep:utoipa"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = "2"
metrics = "0.24"
utoipa = { version = "4", optional = true }
strum = { workspace = true }
